--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -180,7 +180,7 @@ The system will download the needed files, change the bootloader entries, reboot
 === Cleaning Up After the In-place Upgrade
 
 After the proxy has completed the automatic upgrade process, it still will have the old channels from SUSE Manager assigned.
-So in case updates are reported for the proxy, do not apply them.
+If the proxy reports that there are updates available, do not apply them.
 Instead select the proxy from the system list, click change channel assignment. Then deselect the old channels and assign the new ones that have also been used for the upgrade itself.
 
 Now, all the clients connected with the previous SUSE Manager Proxy can access the SUSE Manager Server again and the proxy itself can be managed by the SUSE Manager server as before.
