--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -181,6 +181,7 @@ The system will download the needed files, change the bootloader entries, reboot
 
 After the proxy has completed the automatic upgrade process, it still will have the old channels from SUSE Manager assigned.
 If the proxy reports that there are updates available, do not apply them.
-Instead select the proxy from the system list, click change channel assignment. Then deselect the old channels and assign the new ones that have also been used for the upgrade itself.
+Select the proxy from the system list and click [guimenu]``change channel assignment``. 
+Clear the old channels and assign the new ones, which have been used for the upgrade.
 
 Now, all the clients connected with the previous SUSE Manager Proxy can access the SUSE Manager Server again and the proxy itself can be managed by the SUSE Manager server as before.
