--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -184,4 +184,4 @@ If the proxy reports that there are updates available, do not apply them.
 Select the proxy from the system list and click [guimenu]``change channel assignment``. 
 Clear the old channels and assign the new ones, which have been used for the upgrade.
 
-Now, all the clients connected with the previous SUSE Manager Proxy can access the SUSE Manager Server again and the proxy itself can be managed by the SUSE Manager server as before.
+All the clients connected with the previous {productname} Proxy can access the {productname} Server again and the proxy itself can be managed by the server as before.
