--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -32,7 +32,7 @@ Proxies that are Salt minions cannot be migrated to the new version this way.
 [[proxy-migration-inplace-prep]]
 === Preparation
 
-.Procedure: Preparation
+.Procedure: Preparing to Upgrade
 . First you need to create an autoinstallable distribution based on SLE 15 SP1 because the SUSE Manager Proxy 4 product is based on this version.
 For creating an autoinstallable distribution, see xref:#ref.webui.systems.autoinst.distribution (menu:Main Navigation[Systems > Autoinstallation > Distributions]).
 . Create an autoinstallation profile.
