--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -33,7 +33,8 @@ Proxies that are Salt minions cannot be migrated to the new version this way.
 === Preparation
 
 .Procedure: Preparing to Upgrade
-. First you need to create an autoinstallable distribution based on SLE 15 SP1 because the SUSE Manager Proxy 4 product is based on this version.
+. Create an autoinstallation distribution based on SLE 15 SP1.
+This is required because {productname} Proxy 4 is based on this version.
 For creating an autoinstallable distribution, see xref:#ref.webui.systems.autoinst.distribution (menu:Main Navigation[Systems > Autoinstallation > Distributions]).
 . Create an autoinstallation profile.
 For more information, see xref:#proxy-migration-inplace-profile.
