--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -30,7 +30,7 @@ Proxies that are Salt minions cannot be migrated to the new version this way.
 .Procedure: Preparing to Upgrade
 . Create an autoinstallation distribution based on SLE 15 SP1.
 This is required because {productname} Proxy 4 is based on this version.
-For creating an autoinstallable distribution, see xref:#ref.webui.systems.autoinst.distribution (menu:Main Navigation[Systems > Autoinstallation > Distributions]).
+For information on creating an autoinstallation distribution, see xref:#ref.webui.systems.autoinst.distribution (menu:Main Navigation[Systems > Autoinstallation > Distributions]).
 . Create an autoinstallation profile.
 For more information, see xref:#proxy-migration-inplace-profile.
 In the following template example the label [literal]``proxy4`` is used for both the autoinstallable distribution and for the autoinstall profile.
