--- a/modules/ROOT/pages/index-uyuni.adoc
+++ b/modules/ROOT/pages/index-uyuni.adoc
@@ -22,7 +22,7 @@ The following documentation is available for {productname} version {productnumbe
 |===
 | Available Draft Documentation | Formats
 
-| Installation Guide            | xref:installation:install-intro.adoc[HTML] link:../../pdf/uyuni_installation_guide.pdf[PDF]
+| Installation Guide            | xref:installation:install-intro.adoc[HTML] link:./pdf/uyuni_installation_guide.pdf[PDF]
 | Client Configuration Guide    | xref:client-configuration:client-config-overview.adoc[HTML] link:../../pdf/uyuni_client_configuration_guide.pdf[PDF]
 | Upgrade Guide                 | xref:upgrade:upgrade-overview.adoc[HTML] link:../../pdf/uyuni_upgrade_guide.pdf[PDF]
 | Reference Guide               | xref:reference:intro.adoc[HTML] link:../../pdf/uyuni_reference_manual.pdf[PDF]
