--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -150,7 +150,7 @@ Use this autoinstallation profile as an example.
 ----
 
 .Procedure
-. Make sure all the channels referenced in this autoinstallation profile are available and fully synced.
+. Make sure all the channels referenced in this autoinstallation profile are available and fully synchronized.
 . Replace the label [literal]``proxy4`` with the one you use for your autoinstallation profile.
 
 
