more clean, partially per feedback

--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -33,7 +33,8 @@ This is required because {productname} Proxy 4 is based on this version.
 For information on creating an autoinstallation distribution, see xref:#ref.webui.systems.autoinst.distribution (menu:Main Navigation[Systems > Autoinstallation > Distributions]).
 . Create an autoinstallation profile.
 For more information, see xref:#proxy-migration-inplace-profile.
-In the following template example the label [literal]``proxy4`` is used for both the autoinstallable distribution and for the autoinstall profile.
+This section includes a template autoinstallation profile for your use.
+In the example, the label [literal]``proxy4`` is used for both the autoinstallation distribution and for the autoinstallation profile.
 
 
 
@@ -149,8 +150,10 @@ Use this autoinstallation profile as an example.
 </profile>
 ----
 
-.Procedure
-. Make sure all the channels referenced in this autoinstallation profile are available and fully synchronized.
+Before proceeding make sure all the channels referenced in the
+autoinstallation profile are available and fully synchronized.
+
+
 . Replace the label [literal]``proxy4`` with the one you use for your autoinstallation profile.
 
 
