--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -32,9 +32,9 @@ Proxies that are Salt minions cannot be migrated to the new version this way.
 This is required because {productname} Proxy 4 is based on this version.
 For information on creating an autoinstallation distribution, see xref:#ref.webui.systems.autoinst.distribution (menu:Main Navigation[Systems > Autoinstallation > Distributions]).
 . Create an autoinstallation profile.
-For more information, see xref:#proxy-migration-inplace-profile.
-This section includes a template autoinstallation profile for your use.
-In the example, the label [literal]``proxy4`` is used for both the autoinstallation distribution and for the autoinstallation profile.
+xref:#proxy-migration-inplace-profile includes a template autoinstallation profile for your use.
+In this example, the label [literal]``proxy4`` is used for both the autoinstallation distribution and for the autoinstallation profile.
+Replace the label [literal]``proxy4`` with the one you use for your autoinstallation profile.
 
 
 
@@ -152,9 +152,6 @@ Use this autoinstallation profile as an example.
 
 Before proceeding make sure all the channels referenced in the
 autoinstallation profile are available and fully synchronized.
-
-
-. Replace the label [literal]``proxy4`` with the one you use for your autoinstallation profile.
 
 
 
