provide procedure title

--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -157,7 +157,7 @@ autoinstallation profile are available and fully synchronized.
 
 === Running the In-place Upgrade
 
-.Procedure
+.Procedure: Running the In-place Upgrade
 . In the {webui}, upload the edited autoinstallation profile to your {productname} server (menu:Main Navigation[Systems > Autoinstallation > Profiles]).
 . In the [guimenu]``Kernel Options`` field, enter the following value:
 +
