--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -159,7 +159,7 @@ autoinstallation profile are available and fully synchronized.
 
 .Procedure: Running the In-place Upgrade
 . In the {productname} {webui}, upload the edited autoinstallation profile to your {productname} server (menu:Main Navigation[Systems > Autoinstallation > Profiles]).
-. In the [guimenu]``Kernel Options`` field, enter the following value:
+. In the [guimenu]``Kernel Options`` field, enter this value:
 +
 ----
 autoupgrade=1 Y2DEBUG=1
