--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -165,7 +165,7 @@ autoinstallation profile are available and fully synchronized.
 autoupgrade=1 Y2DEBUG=1
 ----
 +
-The debug setting is not required but can help investigating problems in case something goes wrong.
+The debug setting is not required but can help with investigating future problems you might encounter.
 The [literal]``autoupgrade` parameter however is mandatory.
 . Select the proxy from the system list in {productname}, click the [guimenu]``Provisioning`` tab, and select the profile you created earlier.
 . Click btn:[Start Autoinstallation].
