--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -59,7 +59,8 @@ f204:/var/spacewalk/packages # ls -lh /var/spacewalk/tmp/susemanager.dmp.gz
 ----
 
 
-This is a small test installation; for bigger installations the ratio might be better (space required for the database dump might be less than 30 %).
+This example is from a small test installation.
+For larger installations the ratio might be better (space required for the database dump might be less than 30%).
 
 . Temporary Storage Space
 [NOTE]
