--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -65,7 +65,8 @@ For larger installations the ratio might be better (space required for the datab
 . Temporary Storage Space
 [NOTE]
 ====
-The dump will be written to the directory [path]``/var/spacewalk/tmp``, the directory will be created if it does not exist yet.
+The dump will be written to the directory [path]``/var/spacewalk/tmp``.
+The directory will be created if it does not exist.
 If you want the dump to be stored somewhere else, change the definition of the variable [var]``$TMPDIR`` on the beginning of the script to suit your needs.
 ====
 
