--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -78,7 +78,7 @@ To prepare the target machine (with the example host name ``suma40``) proceed as
 
 [[proc.mgr.migration.setup.target]]
 .Procedure: Setup Target Machine
-. On the target machine install "`{productname}`" Server 4.0 with the Unified Installer ({sle} 15 SP1).
+. On the target machine, install "`{productname}`" Server 4.0 with the Unified Installer ({sle} 15 SP1).
 For more information about installing {productname}, see <<install-server-unified>>.
 . Initiate [command]``yast2 susemanagersetup`` as you would normally do for a setup of {productname}.
 . On the first {productname} setup screen, ensure that [guimenu]``Migrate a SUSE Manager compatible server`` is marked instead of [guimenu]``Set up SUSE Manager from scratch``.
