--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -80,7 +80,7 @@ To prepare the target machine (with the example host name ``suma40``) proceed as
 .Procedure: Setup Target Machine
 . On the target machine, install "`{productname}`" Server 4.0 with the Unified Installer ({sle} 15 SP1).
 For more information about installing {productname}, see <<install-server-unified>>.
-. Initiate [command]``yast2 susemanagersetup`` as you would normally do for a setup of {productname}.
+. Run [command]``yast2 susemanagersetup`` to set up {productname}.
 . On the first {productname} setup screen, ensure that [guimenu]``Migrate a SUSE Manager compatible server`` is marked instead of [guimenu]``Set up SUSE Manager from scratch``.
 . On the second screen, enter the name of the source system as [guimenu]``Hostname of source SUSE Manager Server`` as well as the domain name. Also enter the database credentials of the source system.
 . On the next screen, you need to specify the IP address of the {productname} 4 target system.
