--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -16,7 +16,7 @@ The recommended order for migrations is to first migrate the {productname} serve
 [NOTE]
 ====
 {productname} Proxy 3.2 is compatible with {productname} Server 4. 
-After the server has been migrated to version 4, proxies can be automatically upgraded from the SUSE Manager server using YaST autoinstallation.
+After the server has been migrated to version 4, proxies can be automatically upgraded from the {productname} server using YaST autoinstallation.
 ====
 
 Migrating {productname} Proxy 3.2 only works for proxies that have been registered as traditional clients.
@@ -25,7 +25,7 @@ Proxies that are Salt minions cannot be migrated to the new version this way.
 
 
 [[proxy-migration-inplace]]
-== Upgrading SUSE Manager Proxy In-place
+== Upgrading {productname} Proxy In-place
 
 .Procedure: Preparing to Upgrade
 . Create an autoinstallation distribution based on SLE 15 SP1.
@@ -175,7 +175,7 @@ The system will download the needed files, change the bootloader entries, reboot
 
 === Cleaning Up After the In-place Upgrade
 
-After the proxy has completed the automatic upgrade process, it still will have the old channels from SUSE Manager assigned.
+After the proxy has completed the automatic upgrade process, it still will have the old channels from {productname} assigned.
 If the proxy reports that there are updates available, do not apply them.
 Select the proxy from the system list and click [guimenu]``change channel assignment``. 
 Clear the old channels and assign the new ones, which have been used for the upgrade.
