--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -82,7 +82,8 @@ To prepare the target machine (with the example host name ``suma40``) proceed as
 For more information about installing {productname}, see <<install-server-unified>>.
 . Run [command]``yast2 susemanagersetup`` to set up {productname}.
 . On the first {productname} setup screen, ensure that [guimenu]``Migrate a SUSE Manager compatible server`` is marked instead of [guimenu]``Set up SUSE Manager from scratch``.
-. On the second screen, enter the name of the source system as [guimenu]``Hostname of source SUSE Manager Server`` as well as the domain name. Also enter the database credentials of the source system.
+. On the second screen, enter the name of the source system as [guimenu]``Hostname of source SUSE Manager Server`` as well as the domain name. 
+Enter the database credentials of the source system.
 . On the next screen, you need to specify the IP address of the {productname} 4 target system.
 Normally this value should be pre-set to the correct value and you only should need to press kbd:[Enter].
 Only in the case of multiple IP addresses you might need to specify the one that should be used during migration.
