--- a/modules/upgrade/nav-upgrade-guide.adoc
+++ b/modules/upgrade/nav-upgrade-guide.adoc
@@ -6,6 +6,7 @@ ifndef::backend-pdf[]
 ** xref:migrate-2x-3x.adoc[Server Upgrade 2.x -> 3.x]
 ** xref:migrate-3x-3x.adoc[Server Upgrade 3.x -> 3.x]
 ** xref:migrate-3x-4x.adoc[Server Upgrade 3.x -> 4.x]
+** xref:proxy-migration.adoc[Proxy Upgrade 3.x -> 4.x]
 ** xref:client-migration.adoc[Client Migration]
 ** xref:sp-migration.adoc[Service Pack Migration]
 *** xref:performing-an-sp-migration.adoc[Performing an SP Migration]
