--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -85,7 +85,7 @@ For more information about installing {productname}, see <<install-server-unifie
 . On the second screen, enter the name of the source system as [guimenu]``Hostname of source SUSE Manager Server`` as well as the domain name. 
 Enter the database credentials of the source system.
 . On the next screen, you need to specify the IP address of the {productname} 4 target system.
-Normally this value should be pre-set to the correct value and you only should need to press kbd:[Enter].
+Generally, this parameter should default to the correct value and you only should need to press kbd:[Enter].
 Only in the case of multiple IP addresses you might need to specify the one that should be used during migration.
 +
 .Faking the Host Name
