--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -177,7 +177,7 @@ Edit the script located in [path]``/usr/lib/susemanager/bin/mgr-setup`` and remo
 [IMPORTANT]
 ====
 Make sure your external storage is mounted on the new machine before starting the system for the first time.
-Analogue handling for [path]``/srv/www/htdocs/pub`` if appropriate.
+Also make sure [path]``/srv/www/htdocs/pub`` is mounted if it exists on an external storage device.
 
 All other required files and directories that have not been copied by the migration tool, should be manually copied to the new server.
 ====
