--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -90,7 +90,7 @@ Only in the case of multiple IP addresses you might need to specify the one that
 +
 .Faking the Host Name
 IMPORTANT: During the migration process, the target system will fake its host name to be the same as the source system, this is necessary as the host name of a {productname} installation is vital and should not be changed once set.
-Therefore do not be confused when logging in to your systems during migration; they both will present you with the same host name.
+Be careful when you log in to your systems during migration; they both will present you with the same host name.
 +
 
 . Continue by following the normal installation steps.
