--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -96,7 +96,7 @@ Be careful when you log in to your systems during migration; they both will pres
 . Continue by following the normal installation steps.
 +
 .Database Parameters
-IMPORTANT: Specify the database parameters using the same database parameters as the source system is recommended.
+IMPORTANT: Specify the database parameters using the same database parameters as the source system.
 At least, using the the same database credentials as when creating the source or original {productname} database is mandatory.
 
 . After all the data has been gathered, {yast} will terminate.
