--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -97,7 +97,7 @@ Be careful when you log in to your systems during migration; they both will pres
 +
 .Database Parameters
 IMPORTANT: Specify the database parameters using the same database parameters as the source system.
-At least, using the the same database credentials as when creating the source or original {productname} database is mandatory.
+Even if you intend to change it later on, during migration you must use the the same database credentials as the original {productname} database.
 
 . After all the data has been gathered, {yast} will terminate.
 
