--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -108,7 +108,8 @@ Even if you intend to change it later on, during migration you must use the the 
 [[bp.sec.mgr.migration.performing]]
 == Performing the Migration
 
-The migration is performed by excecuting the following command:
+The migration will not start automatically.
+You will need to trigger it manually, with this command:
 
 ----
 /usr/lib/susemanager/bin/mgr-setup -m
