--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -115,7 +115,7 @@ You will need to trigger it manually, with this command:
 /usr/lib/susemanager/bin/mgr-setup -m
 ----
 
-This command reads the data gathered during <<proc.mgr.migration.setup.target>>, sets up {productname} onto a new target machine and transfers all of the data from the source machine.
+This command reads the data that was gathered during the setup procedure, sets up {productname} onto the new target machine, and transfers all of the data from the source machine.
 As several operations need to be performed on the source machine via SSH, you will be prompted once for the root password of the source machine.
 A temporary SSH key named `migration-key` is created and installed on the source machine, so you need to give the {rootuser} password only once.
 The temporary SSH key will be deleted after successful migration.
