--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -116,7 +116,7 @@ You will need to trigger it manually, with this command:
 ----
 
 This command reads the data that was gathered during the setup procedure, sets up {productname} onto the new target machine, and transfers all of the data from the source machine.
-As several operations need to be performed on the source machine via SSH, you will be prompted once for the root password of the source machine.
+Several operations need to be performed on the source machine using SSH, so you will be prompted once for the root password of the source machine.
 A temporary SSH key named `migration-key` is created and installed on the source machine, so you need to give the {rootuser} password only once.
 The temporary SSH key will be deleted after successful migration.
 Ideally, this is all you will need to do.
