--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -120,7 +120,7 @@ Several operations need to be performed on the source machine using SSH, so you 
 A temporary SSH key named `migration-key` is created and installed on the source machine, so you need to give the {rootuser} password only once.
 The temporary SSH key will be deleted after successful migration.
 
-Depending on the size of the installation, the actual migration will take up to several hours.
+Depending on the size of the installation, the migration can take several hours.
 When successfully finished, you will be notified ("_Migration complete._") and prompted to shut down the source machine, re-configure the network of the target machine to use the same IP address and host name as the original machine and restart it.
 It should now be a fully functional replacement for your previous {productname} 3.2  installation.
 
