--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -123,7 +123,7 @@ The temporary SSH key will be deleted after successful migration.
 Depending on the size of the installation, the migration can take several hours.
 When the migration has finished successfully, you will be notified ("_Migration complete._") and prompted to shut down the source machine.
 Re-configure the network of the target machine to use the same IP address and host name as the original machine and restart it.
-It should now be a fully functional replacement for your previous {productname} 3.2  installation.
+The target machine is now a fully functional replacement for your previous {productname} 3.2  installation.
 
 The following numbers illustrate the runtime for dumping and importing the database:
 
