--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -125,7 +125,7 @@ When the migration has finished successfully, you will be notified ("_Migration 
 Re-configure the network of the target machine to use the same IP address and host name as the original machine and restart it.
 The target machine is now a fully functional replacement for your previous {productname} 3.2  installation.
 
-The following numbers illustrate the runtime for dumping and importing the database:
+These numbers from a test installation illustrate the approximate time it takes to dump and import the database:
 
 ----
 14:53:37   Dumping remote database to /var/spacewalk/tmp/susemanager.dmp.gz on target system. Please wait...
