--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -40,14 +40,17 @@ Before starting the migration process, make sure that the machine is up to date 
 
 During migration the database from the source machine needs to get dumped and this dump needs to be temporarily stored on the target system.
 The dump gets compressed with [command]``gzip`` using the default compression options (maximum compression only yields about 10% of space savings but costs a lot of runtime).
-Check the disk usage of the database with:
+Check the disk usage of the database; for example, a small test installation:
 
 ----
 {prompt.root}du -sch /var/lib/pgsql/data
+==>
+1,8G    data
+1,8G    total
 ----
 
 Ensure that you have at least 30% of this value available in [path]``/var/spacewalk/tmp``.
-
+////
 These values from a test migration should aid in illustrating space requirements:
 
 ----
@@ -58,8 +61,8 @@ f204:/var/spacewalk/packages # ls -lh /var/spacewalk/tmp/susemanager.dmp.gz
 -rw-r--r-- 1 root root 506M Jan 12 14:58 /var/spacewalk/tmp/susemanager.dmp.gz
 ----
 
-
 This example is from a small test installation.
+////
 For larger installations the ratio might be better (space required for the database dump might be less than 30%).
 
 . Temporary Storage Space
