--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -142,7 +142,7 @@ In a test installation with a 1,8GB database, we recorded these times:
 * Dumping the database took around five minutes
 
 
-Importing the dump onto the target system will take an additional seven minutes.
+* Importing the dump onto the target system took an additional seven minutes
 For big installations this can take up to several hours.
 You should also account for the time it takes to copy all the package data to the new machine.
 Depending on your network infrastructure and hardware, this can also take a significant amount of time.
