--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -156,7 +156,7 @@ You can gather all data via {yast} by running:
 mgr-setup -r
 ----
 
-Executing [command]``mgr-setup -r`` will copy the data from the old server to the new one.
+The [command]``mgr-setup -r`` command copies the data from the old server to the new one.
 This command may be run at any time and your current server will remain fully functional.
 When the migration has been initiated only data changed since running [command]``mgr-setup -r`` will need to be transferred.
 This significantly reduces downtime.
