--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -157,7 +157,7 @@ mgr-setup -r
 ----
 
 The [command]``mgr-setup -r`` command copies the data from the old server to the new one.
-This command may be run at any time and your current server will remain fully functional.
+This command can be run at any time and your current server will remain fully functional.
 When the migration has been initiated only data changed since running [command]``mgr-setup -r`` will need to be transferred.
 This significantly reduces downtime.
 
