--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -161,7 +161,7 @@ This command can be run at any time and your current server will remain fully fu
 When the migration has been initiated only data changed since running [command]``mgr-setup -r`` will need to be transferred.
 This significantly reduces downtime.
 
-On large installations transfering the database (which involves dumping the database onto the source machine and then importing the dump onto the target system) will still take some time.
+On large installations, transferring the database (which involves dumping the database onto the source machine and then importing the dump onto the target system) will still take some time.
 During the database transfer no write operations should occur therefore the migration script will shut down any {productname} database services running on the source machine.
 
 
