--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -162,7 +162,8 @@ When the migration has been initiated only data changed since running [command]`
 This significantly reduces downtime.
 
 On large installations, transferring the database (which involves dumping the database onto the source machine and then importing the dump onto the target system) will still take some time.
-During the database transfer no write operations should occur therefore the migration script will shut down any {productname} database services running on the source machine.
+During the database transfer no write operations should occur.
+To avoid this, the migration script shuts down any {productname} database services running on the source machine.
 
 
 
