--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -172,7 +172,7 @@ To avoid this, the migration script shuts down any {productname} database servic
 
 
 If you have package data on external storage (for example, if you have an NFS mount at [path]``/var/spacewalk/packages``), you do not need to copy this data to the new machine.
-Edit the script located in [path]``/usr/lib/susemanager/bin/mgr-setup`` and remove the respective [command]``rsync`` command (located around line 442).
+After migration has completed, edit the script located in [path]``/usr/lib/susemanager/bin/mgr-setup`` and remove the respective [command]``rsync`` command (it will be around line 442).
 
 .Mounting External Storage
 [IMPORTANT]
