--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -70,7 +70,7 @@ Defaults to 1 second.
 
 == Disabling the Salt Mine
 
-In older versions, {productname} used a tool called Salt Mine to check minion availability.
+In older versions, {productname} used a tool called Salt mine to check minion availability.
 With the introduction of more efficient tools in {productname}{nbsp}3.2, it is no longer required.
 If the Salt mine is running on your system, you can reduce load by disabling it.
 Disable the Salt mine by running this command on the server:
