--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -1,32 +1,29 @@
 [[installation-client-requirements]]
 = Supported Client Systems
 
-
-
-
 Supported operating systems for traditional and Salt clients are listed in this table.
 
-In this table, &#2713; indicates that clients running the operating system are supported by {suse}, and &#2717; indicates that it is not supported.
-Fields marked as `TBD` are under consideration, and may or may not be supported at a later date.
+In this table, icon:check[role="green"] indicates that clients running the operating system are supported by {suse}, and icon:times[role="red"] indicates that it is not supported.
+Fields marked as icon:question[role="yellow"] are under consideration, and may or may not be supported at a later date.
 
 [[mgr.supported.clients]]
 [cols="1,1,1,1", options="header"]
 .Supported Client Systems
 |===
 | Operating System | Architecture | Traditional Clients | Salt Clients
-| {sle} 15 | {x86}_64, {ppc}, {ibmz}, ARM | &#2713; | &#2713;
-| {sle} 12 | {x86}_64, {ppc}, {ibmz}, ARM | &#2713; | &#2713;
-| {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz} | &#2713; | &#2713;
-| {sls}-ES 7 | {x86}_64 | &#2713; | &#2713;
-| {sls}-ES 6 | {x86}_64 | &#2713; | &#2713;
-| {rhel} 8 | {x86}_64 | TBD | TBD
-| {rhel} 7 | {x86}_64 | &#2713; | &#2713;
-| {rhel} 6 | {x86}, {x86}_64 | &#2713; | &#2713;
-| CentOS 7 | {x86}, {x86}_64 | TBD | TBD
-| CentOS 6 | {x86}, {x86}_64 | TBD | TBD
-| {opensuse} Leap 15.1 | {x86}_64 | &#2717; | &#2713;
-| {ubuntu} 16.04 | {x86}_64 | &#2717; | &#2713;
-| {ubuntu} 18.04 | {x86}_64 | &#2717; | &#2713;
+| {sle} 15 | {x86}_64, {ppc}, {ibmz}, ARM | icon:check[role="green"] | icon:check[role="green"]
+| {sle} 12 | {x86}_64, {ppc}, {ibmz}, ARM | icon:check[role="green"] | icon:check[role="green"]
+| {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz} | icon:check[role="green"] | icon:check[role="green"]
+| {sls}-ES 7 | {x86}_64 | icon:check[role="green"] | icon:check[role="green"]
+| {sls}-ES 6 | {x86}_64 | icon:check[role="green"] | icon:check[role="green"]
+| {rhel} 8 | {x86}_64 | icon:question[role="yellow"] | icon:question[role="yellow"]
+| {rhel} 7 | {x86}_64 | icon:check[role="green"] | icon:check[role="green"]
+| {rhel} 6 | {x86}, {x86}_64 | icon:check[role="green"] | icon:check[role="green"]
+| CentOS 7 | {x86}, {x86}_64 | icon:question[role="yellow"] | icon:question[role="yellow"]
+| CentOS 6 | {x86}, {x86}_64 | icon:question[role="yellow"] | icon:question[role="yellow"]
+| {opensuse} Leap 15.1 | {x86}_64 | icon:times[role="red"] | icon:check[role="green"]
+| {ubuntu} 16.04 | {x86}_64 | icon:times[role="red"] | icon:check[role="green"]
+| {ubuntu} 18.04 | {x86}_64 | icon:times[role="red"] | icon:check[role="green"]
 |===
 
 
