--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -12,6 +12,10 @@ There are some parameters contained in the bootstrap script which ensure the cli
 It is important that you check the repository information carefully, to ensure it matches the base channel repository.
 If the repository information does not match exactly, the bootstrap script will not be able to download the correct packages.
 
+If you are bootstrapping Salt clients using the {webui}, you will need to ensure that the client system has Python installed before you begin.
+For Salt clients running {sls}{nbsp}12 or older, you will also require the [package]``python-xml`` package.
+
+
 [IMPORTANT]
 .GPG Keys and Uyuni Client Tools
 ====
@@ -24,7 +28,7 @@ When you create your bootstrap script, add a path to the file containing the pub
 ====
 SLES 15 uses Python 3 by default.
 Bootstrap scripts based on Python 2 must be re-created for SLES 15 systems.
-Attempting to register SLES 15 systems with using Python 2 bootstrap scripts will fail.
+Attempting to register SLES 15 systems using Python 2 bootstrap scripts will fail.
 ====
 
 This procedure describes how to generate a bootstrap script.
