Terminal chapter setup

--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -1,21 +1,33 @@
 [[retail.deploy_terminals]]
 = Deploying Terminals
 
-For hardware requirements, see xref:modules/retail/pages/retail-requirements.adoc[].
+
+When you have the {susemgr} Server and Branch Server set up, you are ready to deploy point-of-service terminals by following these steps:
+
+. Create hardware type groups
+. Assign the saltboot formula to each hardware type group
+. Configure partitioning and assigned images
+. Synchronize images to the terminals
+
+Each procedure is detailed in this section.
+
+If you have many terminals, and would prefer this to be handled with a script, see xref:retail:retail-mass-config[].
 
 Before terminals can be deployed, ensure you have prepared a Saltboot-based operating system image.
-For how to build OS images, see xref:modules/administration/pages/image-management.adoc[Administration Guide - Image Management].
+For how to build OS images, see xref:administration:image-management.adoc[].
+
+[IMPORTANT]
+====
+After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminal has connected successfully to the branch server, and you have not connected directly to the {susemgr} server by mistake.
+====
+
+
+== Create a Hardware Type group
 
 Each terminal requires a specific hardware type, which contains information about the product name and terminal manufacturer.
 However, the {susemgr} database does not have this information to begin with.
 In order to tell {susemgr} what image to deploy on each terminal, you can set hardware type groups.
 After you have created your new hardware type group, you can apply the [systemitem]``saltboot-formula`` to the group and configure it for your environment.
-
-After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminal has connected successfully to the branch server, and you have not connected directly to the {susemgr} server by mistake.
-
-
-
-== Create a Hardware Type group
 
 Hardware types allow you to group devices according to manufacturer and device name, so that all devices of a particular type can be managed as one.
 
@@ -48,22 +60,20 @@ Spaces and other non-alphanumeric characters will be removed when the name is pr
 Power on your point-of-service terminals.
 The branch server will bootstrap the terminals according to the data you have provided.
 
+== Assign the Saltboot Formula to each Hardware Type Group
 
-[[retail.sect.admin.terminal_naming]]
-== Terminal Names
+.Procedure: Assigning the saltboot formula to a hardware type group
 
-In the {susemgr} {webui}, terminals have a standard naming format which allows you to match the physical device with its record.
-By default, the name uses this format:
+TBD
 
-----
-BranchName.Manufacturer-ProductName-SerialNumber-MachineID
-----
+== Configure Partitioning and Assigned Images
 
-For example:
+.Procedure: Configuring partitioning and assigned images
 
-----
-B002.TOSHIBA-6140100-41BA03X-c643
-----
+TBD
 
-You can adjust this behavior by toggling the [systemitem]``DISABLE_HOSTNAME_ID`` and [systemitem]``DISABLE_UNIQUE_SUFFIX`` parameters in the PXE formula settings.
-For more information about the PXE formula, see xref:retail.chap.formulas.adoc#retail.sect.formulas.pxe[PXE Formula].
+== Synchronize images to the Terminals
+
+.Procedure: Synchronizing images to the terminals
+
+TBD
