--- a/modules/retail/pages/retail-formulas.adoc
+++ b/modules/retail/pages/retail-formulas.adoc
@@ -6,7 +6,9 @@ Formulas are pre-written Salt states, that are used to configure your {smr} inst
 
 This section lists the primary formulas shipped with {smr} and their configuration options.
 
-All the formulas in this section must be accurately configured for your {smr} installation to function correctly. If you are unsure of the correct formula configuration details, run the [command]``retail_branch_init`` command before you begin to create the recommended formula configuration. You can then manually edit the formulas as required.
+All the formulas in this section must be accurately configured for your {smr} installation to function correctly.
+If you are unsure of the correct formula configuration details, run the [command]``retail_branch_init`` command before you begin to create the recommended formula configuration. 
+You can then manually edit the formulas as required.
 
 
 .State and formula name collisions
@@ -303,7 +305,8 @@ The Saltboot formula is used to configure disk images and partitioning for the s
 
 [IMPORTANT]
 ====
-Saltboot formula is meant to be used as a group formula. Enable and configure saltboot formula for hardware type groups.
+The Saltboot formula is meant to be used as a group formula.
+Enable and configure saltboot formula for hardware type groups.
 ====
 
 .Procedure: Configuring the hardware type group with saltboot
@@ -345,8 +348,6 @@ This will ensure you use the latest available version.
 * In the [guimenu]``Partition encryption password`` field, enter a password if you want to encrypt the partition.
 * In the [guimenu]``Partition flags`` field, leave it empty.
 . Click btn:[Save Formula] to save your formula.
-
-
 
 
 
