--- a/modules/installation/pages/install-proxy-unified.adoc
+++ b/modules/installation/pages/install-proxy-unified.adoc
@@ -5,11 +5,12 @@
 
 
 
-{susemgr} Proxy is a {suse} base product from version 4.0.
+{susemgr} Proxy 4.0 is a {suse} product of the {sle} 15.1 product family.
 This section describes how to install {susemgr} Proxy from {sle} installation media.
 It assumes you have already registered the {susemgr} Proxy product with the {scc} and have a registration code.
 
 For information on registering with {scc}, or obtaining installation media, see xref:general-requirements.adoc[Requirements].
+
 
 
 [NOTE]
