testing icons: font locally

--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -1,5 +1,6 @@
 [[installation-client-requirements]]
 = Supported Client Systems
+:icons: font
 
 Supported operating systems for traditional and Salt clients are listed in this table.
 
