--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -26,7 +26,7 @@ When you create your bootstrap script, add a path to the file containing the pub
 [NOTE]
 .SLES 15 and Python 3
 ====
-SLES 15 uses Python 3 by default.
+SLE 15 uses Python 3 by default.
 Bootstrap scripts based on Python 2 must be re-created for SLES 15 systems.
 Attempting to register SLES 15 systems using Python 2 bootstrap scripts will fail.
 ====
