--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -28,7 +28,7 @@ When you create your bootstrap script, add a path to the file containing the pub
 ====
 SLE 15 uses Python 3 by default.
 Bootstrap scripts based on Python 2 must be re-created for SLE 15 systems.
-Attempting to register SLES 15 systems using Python 2 bootstrap scripts will fail.
+Attempting to register SLE 15 systems using Python 2 bootstrap scripts will fail.
 ====
 
 This procedure describes how to generate a bootstrap script.
