--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -71,8 +71,8 @@ Defaults to 1 second.
 == Disabling the Salt Mine
 
 In older versions, {productname} used a tool called Salt mine to check minion availability.
-Salt mine would cause minions to ping the server every hour, which created significant load.
-With the introduction of a more efficient mechanism in {productname}{nbsp}3.2, Salt mine is no longer required.
+The Salt mine would cause minions to ping the server every hour, which created significant load.
+With the introduction of a more efficient mechanism in {productname}{nbsp}3.2, the Salt mine is no longer required.
 Instead, the {productname} server uses Taskomatic to ping only the minions that appear to have been offline for twelve hours or more, with all minions being pinged at least once in every twenty four hour period by default.
 
 Newly registered Salt minions will have the Salt mine disabled by default.
