Changes per feedback

--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -6,7 +6,8 @@ When you have the {susemgr} Server and Branch Server set up, you are ready to de
 
 . Create hardware type groups
 . Assign and configure the saltboot formula for each hardware type group
-. Synchronize images to the terminals
+. Synchronize images to the branch server
+. Deploy images to the terminals
 
 Each procedure is detailed in this section.
 
@@ -67,18 +68,19 @@ TBD
 . Select the [systemitem]``saltboot-formula`` and click btn:[Save].
 . Navigate to the new menu:Formulas[Saltboot] tab.
 . Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas[].
-. Apply the highstate.
 
 
-== Synchronize images to the Terminals
+== Synchronize images to the Branch Server
 
-.Procedure: Synchronizing images to the terminals
+.Procedure: Synchronizing images to the branch server
 
-. Power on your POS terminals.
-The branch server will bootstrap the terminals according to the data you have provided.
-. TODO:Something like this?
 . On the {susemgr} server, run this command:
 +
 ----
 salt <branch_server_salt_id> state.apply image-sync
 ----
+
+== Deploy images to the terminals
+
+Power on your POS terminals.
+The branch server will bootstrap the terminals according to the data you have provided.
